Fix category image spacing
This doesn’t work for mobile yet.

--- a/src/assets/scss/components/product_columns.scss
+++ b/src/assets/scss/components/product_columns.scss
@@ -1,4 +1,11 @@
 .product__columns {
-  flex: 1 1 auto;
+  flex: 0 1 auto;
   font-size: 0;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  max-width: 40rem;
+
+  @media (min-width: $screen-xxl) {
+
+  }
 }
