--- a/src/assets/scss/elements/images.scss
+++ b/src/assets/scss/elements/images.scss
@@ -26,5 +26,6 @@
     margin-bottom: 6.5rem;
     max-width: 25rem;
     width: 100%;
+    display: block;
   }
 }
